<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.erickogi14gmail.mduka.Items.ItemDetails"
    tools:showIn="@layout/activity_item_details">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="52dp">


        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="3dp"

                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="1dp"
                    android:layout_marginStart="1dp"

                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginBottom="8dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/item_name"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="4dp"

                            android:hint="@string/item_name"
                            android:inputType="textPersonName" />
                    </android.support.design.widget.TextInputLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:orientation="horizontal">

                        <TextView


                            android:id="@+id/textViewC"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/choose_category"
                            android:textAlignment="center"
                            android:textColor="@color/blacktext" />

                        <ImageButton
                            android:id="@+id/button_add_category"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_below="@+id/textViewC"
                            android:onClick="addCategory"
                            android:src="@android:drawable/ic_input_add" />

                        <Spinner
                            android:id="@+id/spinner_category"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_below="@+id/textViewC"
                            android:layout_toEndOf="@+id/button_add_category">

                        </Spinner>
                    </RelativeLayout>


                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="3dp"

                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="1dp"
                    android:layout_marginStart="1dp"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/item_sp"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"

                            android:hint="@string/item_selling_price"
                            android:inputType="number" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/item_bp"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"

                            android:hint="@string/item_buying_price"

                            android:inputType="number" />
                    </android.support.design.widget.TextInputLayout>



                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="3dp"

                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="1dp"
                    android:layout_marginStart="1dp"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/item_quantity"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"

                            android:hint="@string/item_quantity"

                            android:inputType="numberDecimal" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/item_unit"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"

                            android:hint="@string/item_unit_of_measure_ie_kgs"

                            android:inputType="text" />
                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>


            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="3dp"

                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="1dp"
                    android:layout_marginStart="1dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/item_image"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:src="@android:drawable/ic_input_add"
                            app:civ_border_color="@color/colorAccent"
                            app:civ_border_width="1dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pic"
                            android:textAlignment="center"
                            android:textColor="@color/blacktext" />
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_dismiss"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:background="@drawable/rounded_border_accent"
            android:onClick="dismiss"
            android:text="@string/dismiss"
            android:textColor="@color/white" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:background="@drawable/rounded_border_accent"
            android:onClick="save"
            android:text="@string/save"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>
